ios/chrome/browser/ui/history/history_clear_browsing_data_coordinator.mm
@@ -102,12 +102,19 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   [self.historyClearBrowsingDataNavigationController
       dismissViewControllerAnimated:YES
                          completion:^() {
-                           if (completionHandler) {
-                             completionHandler();
-                           }
+                           // completionHandler might trigger
+                           // dismissHistoryWithCompletion, which will call
+                           // stopWithCompletion:, so
+                           // historyClearBrowsingDataNavigationController needs
+                           // to be nil, otherwise stopWithCompletion: will call
+                           // dismiss with nothing to dismiss and therefore not
+                           // trigger its own completionHandler.
                            self.clearBrowsingDataTableViewController = nil;
                            self.historyClearBrowsingDataNavigationController =
                                nil;
+                           if (completionHandler) {
+                             completionHandler();
+                           }
                          }];
 }
 
